--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <!-- Site navigation menu -->
-<ul>
+<ul class="navbar">
   <li><a href="index.html">Home page</a>
   <li><a href="musings.html">Musings</a>
   <li><a href="town.html">My town</a>
