--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <title>My first styled page</title>
-  <link rel="stylesheet" href="mystyle.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Scramble game</title>
+    <link rel="stylesheet" href="pstyle.css">
 
-<body>
+  </head>
+  <body>
+  <div class="container">
+      <div class="start">
+        <h1>Word Scramble</h1>
+        <div class="content">
+        <h2>  <p class="word"></p>  </h2>
+            <div class="hint">
+            <p class="hint">Hint: <span></span>
+          </div>
+          <div class="buttons">
+          <input type="text" spellcheck="false" placeholder="Enter a valid word">
+          <button class="refreshw">Refresh Word</button>
+          <button class="checkw">Check Word</button>
+        </div>
+        </div>
+        </div>
 
-<!-- Site navigation menu -->
-<ul class="navbar">
-  <li><a href="index.html">Home page</a>
-  <li><a href="musings.html">Musings</a>
-  <li><a href="town.html">My town</a>
-  <li><a href="links.html">Links</a>
-</ul>
 
-<!-- Main content -->
-<h1>My first styled page</h1>
 
-<p>Welcome to my styled page!
-
-<p>It lacks images, but at least it has style.
-And it has links, even if they don't go
-anywhere&hellip;
-
-<p>There should be more here, but I don't know
-what yet.
-
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 5 April 2004<br>
-  by myself.</address>
-
-</body>
+      </div>
+      <script src="pscript.js">  </script>
+  </body>
 </html>
+
